# datalake_demo

./: .gitignore  pyproject.toml
generate_datasets/: generate_raw.py
