[tool.poetry]
name = "datalake-demo"
version = "0.1.0"
description = ""
authors = ["Tibuenoc <tiagobuenocorrea@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.6"
taipy = "^4.0.2"
polars = "^1.19.0"
faker = "^33.3.0"
python-dotenv = "^1.0.1"
duckdb = "^1.1.3"
dbt-core = "^1.9.1"
dbt-postgres = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
